cmake_minimum_required(VERSION 3.0.0)
project(leetcode VERSION 0.1.0)


add_subdirectory(1480_running_sum)
add_subdirectory(724_pivot_index)
add_subdirectory(205_Isomorphic_Strings)
add_subdirectory(392_Is_Subsequence)
add_subdirectory(21_Merge_Sorted_Lists)
add_subdirectory(25_reverse_list)
add_subdirectory(876_middle_linked_list)
add_subdirectory(142_linked_list_cycle)
add_subdirectory(121_best_time_to_buy_sell)
